// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/composer/extract extractPackageFile() extracts dependencies with lock file 1`] = `
{
  "deps": [
    {
      "currentValue": ">=5.3.2",
      "datasource": "github-tags",
      "depName": "php",
      "depType": "require",
      "extractVersion": "^php-(?<version>.*)$",
      "packageName": "php/php-src",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "ext-intl",
      "depType": "require",
      "skipReason": "unsupported",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/assetic-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/monolog-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/swiftmailer-bundle",
      "depType": "require",
    },
    {
      "currentValue": "2.1.*",
      "datasource": "packagist",
      "depName": "symfony/symfony",
      "depType": "require",
    },
    {
      "currentValue": "2.2.2",
      "datasource": "packagist",
      "depName": "doctrine/common",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-fixtures-bundle",
      "depType": "require",
    },
    {
      "currentValue": "2.2.x-dev",
      "datasource": "packagist",
      "depName": "doctrine/orm",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "exercise/elastica-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "friendsofsymfony/rest-bundle",
      "depType": "require",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "friendsofsymfony/user-bundle",
      "depType": "require",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "fzaninotto/faker",
      "depType": "require",
    },
    {
      "currentValue": "1.0.1",
      "datasource": "packagist",
      "depName": "jms/di-extra-bundle",
      "depType": "require",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "jms/payment-core-bundle",
      "depType": "require",
    },
    {
      "currentValue": "1.1.0",
      "datasource": "packagist",
      "depName": "jms/security-extra-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-menu-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-paginator-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "liip/imagine-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "merk/dough-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/distribution-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/framework-extra-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/generator-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "simplethings/entity-audit-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "stof/doctrine-extensions-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "twig/extensions",
      "depType": "require",
    },
    {
      "currentValue": "2.3.*",
      "datasource": "packagist",
      "depName": "behat/behat",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/behat-bundle",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/mink-bundle",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/sahi-client",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/common-contexts",
      "depType": "require-dev",
    },
    {
      "currentValue": "^1.10.0",
      "datasource": "packagist",
      "depName": "composer/composer",
      "depType": "require-dev",
    },
  ],
  "extractedConstraints": {
    "php": ">=5.3.2",
  },
  "lockFiles": [
    "composer.lock",
  ],
}
`;

exports[`modules/manager/composer/extract extractPackageFile() extracts dependencies with no lock file 1`] = `
{
  "deps": [
    {
      "currentValue": ">=5.3.2",
      "datasource": "github-tags",
      "depName": "php",
      "depType": "require",
      "extractVersion": "^php-(?<version>.*)$",
      "packageName": "php/php-src",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "ext-intl",
      "depType": "require",
      "skipReason": "unsupported",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/assetic-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/monolog-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/swiftmailer-bundle",
      "depType": "require",
    },
    {
      "currentValue": "2.1.*",
      "datasource": "packagist",
      "depName": "symfony/symfony",
      "depType": "require",
    },
    {
      "currentValue": "2.2.2",
      "datasource": "packagist",
      "depName": "doctrine/common",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-fixtures-bundle",
      "depType": "require",
    },
    {
      "currentValue": "2.2.x-dev",
      "datasource": "packagist",
      "depName": "doctrine/orm",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "exercise/elastica-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "friendsofsymfony/rest-bundle",
      "depType": "require",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "friendsofsymfony/user-bundle",
      "depType": "require",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "fzaninotto/faker",
      "depType": "require",
    },
    {
      "currentValue": "1.0.1",
      "datasource": "packagist",
      "depName": "jms/di-extra-bundle",
      "depType": "require",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "jms/payment-core-bundle",
      "depType": "require",
    },
    {
      "currentValue": "1.1.0",
      "datasource": "packagist",
      "depName": "jms/security-extra-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-menu-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-paginator-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "liip/imagine-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "merk/dough-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/distribution-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/framework-extra-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/generator-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "simplethings/entity-audit-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "stof/doctrine-extensions-bundle",
      "depType": "require",
    },
    {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "twig/extensions",
      "depType": "require",
    },
    {
      "currentValue": "2.3.*",
      "datasource": "packagist",
      "depName": "behat/behat",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/behat-bundle",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/mink-bundle",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/sahi-client",
      "depType": "require-dev",
    },
    {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/common-contexts",
      "depType": "require-dev",
    },
    {
      "currentValue": "^1.10.0",
      "datasource": "packagist",
      "depName": "composer/composer",
      "depType": "require-dev",
    },
  ],
  "extractedConstraints": {
    "php": ">=5.3.2",
  },
}
`;
